--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,14 +19,23 @@
 </head>
 <body>
   <header>
+    <h1>1 Gif 4 U</h1>
     <nav>
-        <li class="nav-list"><a href="/users/new">register</a></li>
-        <li class="nav-list"><a href="/sessions/new">log in</a></li>
+      <% if logged_in? %>
+      <ul>
+        <li><a href=<%= "/users/#{current_user.id}" %>><%= current_user.username %></a></li>
+        <li><a href='/'>Home</a></li>
+        <li><form action='/sessions' method='POST'><input type='hidden' name='_method' value='DELETE'><input type='submit' value='Log Out'></form></li>
+      <% else %>
+        <li><a href="/users/new">register</a></li>
+        <li><a href="/sessions/new">log in</a></li>
+        <li><a href='/'>Home</a></li>
+      </ul> 
+      <% end %>
     </nav>
   </header>
   <%= yield %>
   <footer>Coded by Melanie Gershman😈</footer>
 </body>
 </html>
-
 
