--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,14 +2,25 @@ body {
   background: #3494E6; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #3494E6 , #EC6EAD); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #3494E6 , #EC6EAD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-          
+  font-family: 'Montserrat', sans-serif;     
+}
+
+.error {
+  color: red;
+  font-size: 9px;
+  padding-top: 5px;
+  text-align: center;
+}
+
+.gif {
+  text-align: center;
 }
 
 .container {
   opacity: 0.9;
   margin: 20px auto;
   width: 600px;
-  height: 600px;
+  /*height: 600px;*/
   margin-top: 150px;
   margin-bottom: 300px;
   padding: 0px 20px 20px 20px;
@@ -20,6 +31,12 @@ body {
   -webkit-box-shadow: -1px -1px 35px 14px rgba(255,255,255,0.7);
   -moz-box-shadow: -1px -1px 35px 14px rgba(255,255,255,0.7);
   box-shadow: -1px -1px 35px 14px rgba(255,255,255,0.7);
+}
+
+#registration-form .container {
+  position: relative;
+  margin-top: 100px;
+  margin: 0 auto;
 }
 
 .button {
@@ -35,29 +52,83 @@ body {
   border-radius: 8px;
   padding: 9px;  
   color: #757575; 
-  
+}
+
+
+header {
+  width: 100%;
+  display: table;
+  padding: 25px;
+  box-sizing: border-box;
+  /*display: inline-block;*/
 }
 
 h1 {
   position: relative;
-  text-align: center;
+  float: left;
   font-family: 'Montserrat', sans-serif;
   font-size: 59px;
   color: #757575;
+  padding-left: 40px;
+}
+
+img {
+  position: relative;
+  max-width: 600px;
+  text-align: center;
+  padding-top: 25px;
+}
+
+nav {
+  text-align: right;
+  padding-right: 40px;
+  float: right;
+}
+
+
+nav {
+  display: inline-block;
+  height: 40px;
+  margin: 13px 0;
+}
+
+nav ul {
+  /*float: right;*/
+  display: inline-block;
+  padding: 10px;
 }
 
 nav li{
-  padding: 10px;
+  /*text-align: right;*/
+  font-size: 14px;
+  margin-right: 25px;
   display: inline-block;
   list-style-type: none;
 }
 
-nav a{
-  background-color: ;
+nav li a{
   text-decoration: none;
+  /*background: #E0EAFC; /* fallback for old browsers */
+  /*background: -webkit-linear-gradient(to left, #E0EAFC , #CFDEF3); /* Chrome 10-25, Safari 5.1-6 */*/
+  /*background: linear-gradient(to left, #E0EAFC , #CFDEF3);  W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+nav li a:hover {
+  text-decoration: underline;
+}
+
+input {
+  font-family: 'Montserrat', sans-serif;
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+  background: #E0EAFC; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #E0EAFC , #CFDEF3); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #E0EAFC , #CFDEF3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 footer {
+  margin-bottom: 50px;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
