--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,13 +6,17 @@ body {
 }
 
 .error {
-  color: red;
+  /*color: red;*/
   font-size: 9px;
-  padding-top: 5px;
+  padding: 25px;
   text-align: center;
 }
 
 .gif {
+  text-align: center;
+}
+
+.center {
   text-align: center;
 }
 
@@ -83,13 +87,8 @@ nav {
   text-align: right;
   padding-right: 40px;
   float: right;
-}
-
-
-nav {
   display: inline-block;
   height: 40px;
-  margin: 13px 0;
 }
 
 nav ul {
@@ -99,11 +98,14 @@ nav ul {
 }
 
 nav li{
-  /*text-align: right;*/
+
   font-size: 14px;
-  margin-right: 25px;
   display: inline-block;
   list-style-type: none;
+}
+
+nav li+li {
+  margin-left: 25px;
 }
 
 nav li a{
@@ -120,7 +122,8 @@ nav li a:hover {
 input {
   font-family: 'Montserrat', sans-serif;
   border: none;
-  border-radius: 8px;
+  border-radius: 4px;
+  padding: 15px;
   font-size: 14px;
   background: #E0EAFC; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #E0EAFC , #CFDEF3); /* Chrome 10-25, Safari 5.1-6 */
